--- a/package.json
+++ b/package.json
@@ -1,12 +1,36 @@
 {
   "name": "posts",
   "version": "1.0.0",
-  "description": "Demo project for Frontend Test",
+  "description": "Demo frontend-test. No boilerplate used!",
   "main": "index.js",
+  "proxy": "http://localhost:3001/",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack serve --hot --open --mode development",
+    "build": "webpack --config webpack.config.js --mode production",
+    "start-dev": "concurrently \"npm run dev\" \"npm run server\"",
+    "server": "node server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.2",
+    "express": "^4.17.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "babel-loader": "^8.2.3",
+    "concurrently": "^7.0.0",
+    "css-loader": "^6.6.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
+  }
 }
