--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack serve --hot --open --mode development",
     "build": "webpack --config webpack.config.js --mode production",
     "start-dev": "concurrently \"npm run dev\" \"npm run server\"",
-    "server": "node server.js"
+    "server": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +16,11 @@
   "dependencies": {
     "body-parser": "^1.19.2",
     "express": "^4.17.3",
+    "lodash": "^4.17.21",
+    "nodemon": "^2.0.15",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
